# machine-learning

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
machine_learning/: __init__.py  config.py  dataset.py  features.py  plots.py
machine_learning/matplotlib/: iragca_ml.mplstyle
machine_learning/modeling/: pipepline.py  predict.py  train.py
notebooks/assignments/: 1.0_KNN-Implementation.ipynb
notebooks/group2/: 1.0-iragca-mental-health-knn-test.ipynb  2.0-iragca-cannabis-knn-test.ipynb  3.0-iragca-dropout.ipynb  3.0-iragca-gtd-eda.ipynb  3.0-iragca-parkinsons.ipynb  3.0-iragca-student-performance-eda-knn.ipynb  3.0-iragca-wine-quality.ipynb
references/group2/: cannabis-species-eda-and-models-pipeline.ipynb  mental-health-eda-prediction.ipynb
reports/ydata/group2/: 2- burden-disease-from-each-mental-illness.html  3- adult-population-covered-in-primary-data-on-the-prevalence-of-major-depression.html  4- adult-population-covered-in-primary-data-on-the-prevalence-of-mental-illnesses.html  5- anxiety-disorders-treatment-gap.html  6- depressive-symptoms-across-us-population.html  7- number-of-countries-with-primary-data-on-prevalence-of-mental-illnesses-in-the-global-burden-of-disease-study.html
