[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "machine_learning"
version = "0.0.1"
description = "DS322 - Machine Learning"
authors = [
  { name = "Chris Andrei Irag" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"
dependencies = [
    "ipywidgets>=8.1.5",
    "setuptools>=75.8.0",
    "ucimlrepo>=0.0.7",
    "ydata-profiling>=4.12.2",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["machine_learning"]
force_sort_within_sections = true

[tool.uv.sources]
machine-learning = { workspace = true }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "fastexcel>=0.12.1",
    "flake8>=7.1.2",
    "ipykernel>=6.29.5",
    "isort>=6.0.0",
    "loguru>=0.7.3",
    "machine-learning",
    "matplotlib>=3.10.0",
    "mkdocs>=1.6.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "polars>=1.22.0",
    "pyarrow>=19.0.1",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
]
